# aurora

./: .gitignore  Procfile  README.md  ROADMAP.md  SETUP_AGENTBEATS.md  aurora_tasks.json  green-card.json  green-card.toml  legacy_flask_server.py  main.py  pyproject.toml  red_agent_card.toml  requirements.txt  run.sh
agentbeats_sdk/: aurora_agent.py  aurora_green_server.py  run_sdk.sh
agents/: __init__.py  appworld_api_provider.py  aurora_core.py  green_agent.py  green_agent_a2a.py  white_agent.py
scripts/: kickoff.py  run.sh
src/green_agent/: __init__.py  agent.py  run.py  tau_green_agent.toml
src/my_util/: __init__.py  appworld_api.py  my_a2a.py
src/white_agent/: __init__.py  agent.py  launcher.py
