[project]
name = "aurora-green-agent"
version = "1.0.0"
description = "Deterministic Aurora Green Agent for evaluating white agents on context-aware travel playlist generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.8",
    "requests>=2.31.0",
    "uvicorn>=0.37.0",
    "dotenv>=0.9.9",
    "typer>=0.19.2",
    "pydantic-settings>=2.11.0",
    "earthshaker>=0.1.12",
    "agentbeats",
    "openai-agents"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]


